# constexpr

./: .gitignore  Cargo.toml
constexpr-macros/: Cargo.toml  templates.pest
constexpr-macros/src/: grammar.rs  lib.rs
examples/: bar_baz.rs
src/: lib.rs
test_some/: Cargo.toml
test_some/src/: main.rs
tests/: template_test.rs
