[package]
name = "constexpr"
version = "0.0.1-alpha1"
authors = ["Vladimir Motylenko <vladimir.motylenko@xdev.re>"]
description = "Constant fn evaluation in Rust through macros."
license = "MIT/Apache-2.0"

[dependencies]
proc-macro-hack = "0.4.0"
constexpr-macros = {version = "0.0.1-alpha1", path="./constexpr-macros/"}