[package]
name = "constexpr-macros"
version = "0.0.1-alpha1"
authors = ["Vladimir Motylenko <vladimir.motylenko@xdev.re>"]
license = "MIT/Apache-2.0"
description = "Macros to define c++ like constexpr."

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.4.0"
pest = "1.0.6"
pest_derive = "1.0.6"